# hjkl-ft

./: .gitignore  BUGS.md  Cargo.toml
admin/: .gitignore  Cargo.toml  Trunk.toml  _headers  index.html  manifest.webmanifest
admin/config/: frontend.toml
admin/config-prod/: frontend.toml
admin/scripts/: deploy-prod.sh
admin/src/: api.rs  app.rs  auth.rs  config.rs  datashare.rs  lib.rs
backend/: Cargo.toml  DEPRECATED.md
backend/examples/: test_reqwest.rs  test_tcp.rs
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: configurator.rs  mod.rs  postcard_body.rs  response.rs
backend/src/api/endpoints/: ai_lookup.rs  ai_vision.rs  mod.rs  sync.rs
backend/src/providers/: database.rs  image_convert.rs  llm.rs  mod.rs
backend/src/use_cases/: ai_lookup.rs  ai_vision.rs  mod.rs  nutrient_key.rs  sync.rs
cloudflare/: ARCHITECTURE.md
cloudflare/ai-worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
cloudflare/auth-worker/: Cargo.toml  wrangler.toml
cloudflare/auth-worker/.wrangler/cache/: wrangler-account.json
cloudflare/auth-worker/src/: account.rs  auth.rs  auth_do.rs  lib.rs  pair.rs  push.rs  recovery.rs  token.rs  types.rs  user_do.rs
cloudflare/auth-worker/tests/: README.md  auth.test.ts  package.json
cloudflare/bug-report-worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
cloudflare/lava-mock/: Cargo.toml  wrangler.toml
cloudflare/main-flow/: Cargo.toml  wrangler.toml
cloudflare/main-flow/src/: lib.rs  push_do.rs  push_send.rs  schedule_do.rs
cloudflare/ocr-queue/: Cargo.toml  package-lock.json  package.json  wrangler.toml
cloudflare/payment-worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
cloudflare/receipt-worker/: Cargo.toml  wrangler.toml
cloudflare/receipt-worker/src/: lib.rs
cloudflare/support-worker/: Cargo.toml  wrangler.toml
cloudflare/sync-worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
cloudflare/sync-worker/src/: index.ts  lib.rs  sync_do.rs  token.rs  types.rs
cloudflare/telegram-worker/: Cargo.toml  wrangler.toml
common/api-types/: Cargo.toml
config/: backend.toml  frontend.toml
docs/: deploy.md  food-photo-recognition.md  ig0-video-scenario.md  landing-reference.md  notification-receipt.md  story-ch1-ch2.md  support-chat.md
docs/analysis/: durable-objects.md  findings.md  scenarios.md
docs/bug-evidence/: bug1-photo-buttons.md  bug2-setup-checkmarks.md  bug3-notif-deeplink.md
e2e/: ig-preview.mjs  package-lock.json  package.json  playwright.config.ts  testid-plan.md
e2e/test-results/: .last-run.json
e2e/tests/: audit.spec.ts  auto-update.spec.ts  chat-nav.spec.ts  csp.spec.ts  diary-scroll.spec.ts  diary-search.spec.ts  helpers.ts  navigation.spec.ts  no-hardcoded-css.spec.ts  notif-deeplink.spec.ts  onboard.spec.ts  onboarding.spec.ts  pairing-flow.spec.ts  pairing.spec.ts  push.spec.ts  settings.spec.ts  support-chat.spec.ts  sync-deletions.spec.ts  sync-e2e.spec.ts  sync.spec.ts  weight-cycle.spec.ts  weight-trend.spec.ts
frontend/: Cargo.toml  Trunk.toml  _headers  build.rs  index.html  manifest.json  package-lock.json  package.json  pwa-worker.js  sw.js
frontend/config/: frontend.toml
frontend/config-prod/: frontend.toml
frontend/scripts/: deploy-prod.sh  extract-inline-module.sh  seed-test-subscription.mjs
frontend/src/: app.rs  lib.rs
frontend/src/components/: add_ingredient_modal.rs  bar_chart.rs  calorie_chart.rs  chat_input.rs  chat_message.rs  chat_streaming.rs  code_auth.rs  cycle_widget.rs  day_bars.rs  diary_add_modal.rs  food_edit_modal.rs  food_editor.rs  food_list_item.rs  food_modal.rs  food_picker.rs  food_picker_modal.rs  food_weight_modal.rs  gauge.rs  info_hint.rs  live_message.rs  meal_panel.rs  mini_chart.rs  mod.rs  mode_toggle.rs  net_badge.rs  new_food_panel.rs  notify_panel.rs  progress_widget.rs  pwa_icons.rs  qr_code.rs  qr_scanner.rs  restaurant_field.rs  steps_chart_modal.rs  steps_panel.rs  steps_widget.rs  story_tray.rs  story_widgets.rs  summary_block.rs  waste_field.rs  weight_chart_modal.rs  (+3 more)
frontend/src/pages/: auth_page.rs  backup.rs  chat.rs  dashboard.rs  diary.rs  diary_add.rs  foods.rs  goals.rs  help.rs  mod.rs  onboard.rs  onboard_tg.rs  pair_page.rs  paywall.rs  paywall_onboarding.rs  privacy.rs  progress.rs  push_onboarding.rs  pwa_prompt.rs  recipe_add.rs  recipe_detail.rs  recipes.rs  settings.rs  steps.rs  story.rs  story_accounting.rs  story_activity.rs  story_bones.rs  story_ch2_drinks.rs  story_ch2_meals.rs  story_ch2_mistake.rs  story_ch2_night.rs  story_ch2_protein.rs  story_ch2_snack.rs  story_ch2_veg.rs  story_ch3_aesthetics.rs  story_ch3_beauty.rs  story_ch3_fat.rs  story_ch3_lean.rs  story_ch3_lifestyle.rs  (+10 more)
frontend/src/services/: ai.rs  api.rs  app_flags.rs  auth.rs  bug_report.rs  chat.rs  classify.rs  config.rs  curator_share.rs  db.rs  diag.rs  enrich.rs  errors.rs  i18n.rs  indicators.rs  local.rs  meal_split.rs  mod.rs  net.rs  notify.rs  platform.rs  profile.rs  push.rs  sticky.rs  stories.rs  story.rs  story_dsl.rs  subscription.rs  summary.rs  support_chat.rs  sync.rs  update.rs  weekly_card.rs  weight_cycle.rs  weight_trend.rs
frontend/story/: story.yaml
frontend/styles/: input.css
landing/: index.html  offer.html  privacy.html
landing-ig0/: index.html
migrations/: 001_initial.sql
scripts/: .gitignore  admin-approval-e2e.mjs  admin-icon-gen.py  admin-passkey-check.mjs  admin-smoke.mjs  dump-story-text.mjs  harness.mjs  logo-gen.py  manual-test.mjs  miniapp-states.mjs  package.json  payments-ui-smoke.mjs  preview-card.mjs  preview-card2.mjs  preview-planka.mjs  shot-hub.mjs  shot-planka-accepted.mjs  shot-sec.mjs  shot-walk.mjs  shot2.mjs  story.test.mjs  verify-steps-goal.mjs
services/ocr-poller/: .gitignore  (+5 more)
(+52 files in other folders)
