[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Navigator",
    "Screen",
    "Storage",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "CredentialsContainer",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
    "PublicKeyCredentialRequestOptions",
] }
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v7", "js"] }
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
