[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
api-types = { path = "../common/api-types" }
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
image = "0.25"
base64 = "0.22"
arti-pipes = { git = "https://github.com/stavenko/arti-pipes" }
schemars = { version = "1", features = ["preserve_order"] }
futures = "0.3"
