[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
api-types = { path = "../common/api-types" }
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
toml = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "File",
    "FileList",
    "HtmlInputElement",
    "Blob",
    "MediaQueryList",
    "Storage",
    "CredentialsContainer",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "PublicKeyCredentialCreationOptions",
    "PublicKeyCredentialRequestOptions",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Clipboard",
    "Screen",
    "ServiceWorkerRegistration",
    "PushManager",
    "PushSubscription",
    "PushSubscriptionOptions",
    "PushSubscriptionOptionsInit",
    "NotificationPermission",
    "Notification",
] }
gloo-net = "0.6"
uuid = { version = "1", features = ["v7", "js"] }
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
base64 = "0.22"
js-sys = "0.3"
rexie = "0.6"
serde_json = "1"
serde-wasm-bindgen = "0.6"
fast_qr = { version = "0.12", features = ["svg"] }
rqrr = "0.8"
sha2 = "0.10"
