[package]
name = "auth-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
passkey-server = { version = "0.1", default-features = false, features = ["wasm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["wasm-bindgen"] }
base64 = "0.22"
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }
async-trait = "0.1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
