[package]
name = "main-flow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
