# Standalone crate: built independently by worker-build, not part of the repo root
# workspace. The empty table keeps cargo from absorbing it into the root workspace.
[workspace]

[package]
name = "receipt-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
serde_json = "1"
