# Standalone crate: built independently by worker-build, not part of the repo root
# workspace. The empty table keeps cargo from absorbing it into the root workspace.
[workspace]

[package]
name = "sync-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
js-sys = "0.3"
wasm-bindgen = "0.2"
